fixed nav toggle button z-index, collapse default sections

--- a/resources/less/ext.mooc.less
+++ b/resources/less/ext.mooc.less
@@ -7,6 +7,7 @@
 @import "elements.less";
 
 // COLORS
+@cContentBg: #FFF;
 @cSectionBg: #CCC;
 @cNavigationBarBg: #FFF;
 
@@ -166,7 +167,7 @@
 .btn-toggle-mw-nav {
   position: fixed;
   top: 50%;
-  left: 0;
+  left: 2px;
   width: 20px;
   height: auto;
   z-index: 1000;
@@ -181,6 +182,7 @@
 
 // fix CSS z-index BUG of MW
 #bodyContent {
+  background-color: @cContentBg;
   z-index: 1000;
 }
 
